# weather-forecast-mcp-server

./: Dockerfile  LICENSE  README.md  compose.yml  pyproject.toml  server.json
mcp-app-server/: package-lock.json  package.json  server.mjs
mcp-app-ui/: package-lock.json  package.json  vite.config.js
mcp-app-ui/src/: main.jsx
src/weather_forecast_mcp_server/: server.py
src/weather_forecast_mcp_server/ui/: weather_dashboard.html
tests/: test_server.py
