[project]
name = "weather-forecast-mcp-server"
version = "1.2.1"
description = "MCP server for weather forecasts using the National Weather Service API"
authors = [
    { name = "Nils Friedrichs" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]

[project.urls]
Homepage = "https://friedrichs-it.de/blog/weather-forecast-api-as-stdio-python-mcp-server"
Repository = "https://github.com/slin-master/weather-forecast-mcp-server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/weather_forecast_mcp_server"]
include = ["src/weather_forecast_mcp_server/ui/*.html"]

[tool.hatch.build.targets.sdist]
include = [
  "src/weather_forecast_mcp_server",
  "src/weather_forecast_mcp_server/ui",
  "README.md",
  "pyproject.toml",
]
